#1923 Fix Collapsed list

--- a/app/bitshares-ui-style-guide/styles/basic/theme.less
+++ b/app/bitshares-ui-style-guide/styles/basic/theme.less
@@ -377,14 +377,8 @@ button.ant-switch {
       background-color: @collapse-item-header-background-color-hover;
     }
     .arrow {
-      transform: @collapse-arrow-close-transform !important;
       right: @collapse-arrow-right-position !important;
       left: @collapse-arrow-left-position !important;
-    }
-    &[aria-expanded="true"] {
-      .arrow {
-        transform: @collapse-arrow-open-transform !important;
-      }
     }
 
   }
