--- a/app/bitshares-ui-style-guide/styles/light/light-theme.css
+++ b/app/bitshares-ui-style-guide/styles/light/light-theme.css
@@ -18193,12 +18193,8 @@ button.ant-switch.ant-switch-checked:after {
   background-color: #00A9E0;
 }
 .ant-collapse-header .arrow {
-  transform: rotate(90deg) !important;
   right: 16px !important;
   left: auto !important;
-}
-.ant-collapse-header[aria-expanded="true"] .arrow {
-  transform: rotate(-90deg) !important;
 }
 .ant-collapse-item {
   background-color: transparent;
